# gaia-fitpack

./: .gitignore  BRIEF.md  BUILD_VERIFICATION.md  CMakeLists.txt  LICENSE  README.md  RECOMMENDATIONS.md  RELEASE_NOTES.md  bispev.f  curfit.f  evapol.f  fourco.f  fpader.f  fpback.f  fpbacp.f  fpbfou.f  fpbisp.f  fpbspl.f  fpchec.f  fpched.f  fpchep.f  fpclos.f  fpcons.f  fpcosp.f  fpcsin.f  fpcurf.f  fpcuro.f  fpcyt1.f  fpcyt2.f  fpdisc.f  fpfrno.f  fpgivs.f  fpgrdi.f  fpgrpa.f  fpgrre.f  fpgrsp.f  fpinst.f  fpintb.f  fpknot.f  fpopdi.f  (+28 more)
baselines/: mnbisp.expected  mncloc.expected  mncoco.expected  mnconc.expected  mncosp.expected  mncual.expected  mncuev.expected  mncurf.expected  mndbin.expected  mnevpo.expected  mnfour.expected  mninst.expected  mnpade.expected  mnparc.expected  mnpasu.expected  mnperc.expected  mnpogr.expected  mnpola.expected  mnprof.expected  mnregr.expected  mnspal.expected  mnspde.expected  mnspev.expected  mnspgr.expected  mnsphe.expected  mnspin.expected  mnspro.expected  mnsuev.expected  mnsurf.expected  perf_baseline.json
benchmarks/: BENCHMARK_SPEC.md
ex/: dapasu  dapogr  dapola  daregr  daspgr  dasphe  dasurf  safety_s001_curfit.f  safety_s002_curfit.f  safety_s003_curfit.f  safety_s004_splev.f  safety_s005_integers.f  safety_s006_ca001.f  safety_s007_ca003.f  safety_s008_u001.py  safety_s009_u002.f  safety_s010_req_gen_001.f  safety_s012_req_gen_003.f  safety_s014_req_gen_005.f
tests/: Makefile  test_S001.f90  test_S002.f90  test_S003.f90  test_S004.f90  test_S005.f90  test_S006.f90  test_S007.f90  test_S008.f90  test_S009.f90  test_S010.f90
